--- a/logica/imc.html
+++ b/logica/imc.html
@@ -29,4 +29,20 @@
 
 	imprimir(nombre + " su IMC es: " + imc);
 
+	if (imc < 18.5) {
+		imprimir("El IMC está por debajo del valor recomendado");
+	}
+
+	if (imc > 18.5 && imc <= 24.9) {
+		imprimir("El IMC está dentro del valor recomendado");
+	}
+
+	if (imc >= 25 && imc <= 30) {
+		imprimir("El IMC está por encima del valor recomendado. Sobrepeso.");
+	}
+
+	if (imc > 30) {
+		imprimir("El IMC está por encima del valor recomendado. Obesidad.");
+	}
+
 </script>
