Agregando archivos de practica 3er curso

--- a/logica/c3_practica_cambia_color.html
+++ b/logica/c3_practica_cambia_color.html
@@ -7,20 +7,14 @@
 
     pincel.fillStyle = "grey";
     pincel.fillRect(0,0,600,400);
-
-    function lanzarAlerta(evento){
-        var x = evento.pageX - pantalla.offsetLeft;
-        var y = evento.pageY - pantalla.offsetTop;
-
-        console.log(evento);
-        alert("Ha hecho click en la coordenada " + x + "," + y);
-    }
+    var colores = ["blue","red","green"];
+    var colorActual = 0;
 
     function dibujarCirculo(evento){
         var x = evento.pageX - pantalla.offsetLeft;
         var y = evento.pageY - pantalla.offsetTop;
 
-        pincel.fillStyle = "blue";
+        pincel.fillStyle = colores[colorActual];
         pincel.beginPath();
         pincel.arc(x,y,10,0,2*3.14);
         pincel.fill();
@@ -28,7 +22,19 @@
 
     }
 
-//    pantalla.onclick = lanzarAlerta;
+    function cambiaColor(){
+        colorActual++;
+        if (colorActual >= colores.length) {
+            colorActual = 0;
+        }
+        else {
+            return false;
+        }
+
+    }
+
     pantalla.onclick = dibujarCirculo;
+
+    pantalla.oncontextmenu = cambiaColor;
 
 </script>
