Cambios del curso HTML y CSS p3

--- a/logica/Html_Css_JS/productos.html
+++ b/logica/Html_Css_JS/productos.html
@@ -6,7 +6,7 @@
 		<title>Productos</title>
 
 		<link rel="stylesheet" type="text/css" href="reset.css">
-		<link rel="stylesheet" type="text/css" href="productos.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
 	<body>
