--- a/logica/Html_Css_JS/index.html
+++ b/logica/Html_Css_JS/index.html
@@ -4,13 +4,26 @@
 		<meta charset="utf-8"> <!-- Diccionario de caracteres -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Barbería Alura</title> <!-- Nombre de la pestaña en el navegador -->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="style-home.css">
+		<!--link rel="stylesheet" type="text/css" href="style.css"-->
 	</head>
 	<body> <!-- las etiquetas de contenido van aqui en el body -->
 		<div>
 			<header>
 				<h1 class="titulo-principal">Barbería Alura</h1>
 			</header>
+			<!--header>
+			<div class="caja">
+				<h1><img src="images/logo.png"></h1>
+				<nav>
+					<ul>
+						<li><a href="index.html">Home</a></li>
+						<li><a href="productos.html">Productos</a></li>
+						<li><a href="contacto.html">Contacto</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header-->
 		</div>
 
 		<img id="banner" src="images/banner.jpg">
@@ -38,4 +51,8 @@
 		</div>
 
 	</body>
+	<footer>
+		<img src="images/logo-blanco.png">
+		<p class="copyright">&copy Copyright Barbería Alura - 2023</p>
+	</footer>
 </html>
