--- a/logica/Html_Css_JS/productos.html
+++ b/logica/Html_Css_JS/productos.html
@@ -13,7 +13,7 @@
 
 		<header>
 			<div class="caja">
-				<h1><img src="images/logo.png"></h1>
+				<h1><img src="images/logo.png" alt="logotipo barbería Alura"></h1>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -27,19 +27,19 @@
 		<main>
 			<ul class="productos">
 				<li><h2>Cabello</h2>
-					<img src="images/Cabello.jpg">
+					<img src="images/Cabello.jpg" alt="servicio corte y estilizado de cabello">
 					<p class="producto-descripcion">Con tijera o máquina a gusto del cliente</p>
 					<p class="producto-precio">$ 10.00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
-					<img src="images/barba.jpg">
+					<img src="images/barba.jpg" alt="servicio corte y estilizado de barba">
 					<p class="producto-descripcion">Corte y diseño profesional de barba</p>
 					<p class="producto-precio">$ 8.00</p>
 				</li>
 				<li>
 					<h2>Cabello + Barba</h2>
-					<img src="images/cabello+barba.jpg">
+					<img src="images/cabello+barba.jpg" alt="servicio completo cabello y barba">
 					<p class="producto-descripcion">Paquete completo de cabello y barba</p>
 					<p class="producto-precio">$ 15.00</p>
 				</li>
@@ -47,7 +47,7 @@
 		</main>
 
 		<footer>
-			<img src="images/logo-blanco.png">
+			<img src="images/logo-blanco.png" alt="logotipo barbería Alura">
 			<p class="copyright">&copy Copyright Barbería Alura - 2023</p>
 		</footer>
 
