--- a/logica/Html_Css_JS/contacto.html
+++ b/logica/Html_Css_JS/contacto.html
@@ -7,6 +7,10 @@
 
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -24,7 +28,7 @@
 			</div>
 		</header>
 
-		<main>
+		<main class="contacto">
 			<form>
 				<label for="nombre">Nombre completo</label>
 				<input type="text" id="nombre" class="input-padron" required>
