--- a/logica/Html_Css_JS/productos.html
+++ b/logica/Html_Css_JS/productos.html
@@ -7,6 +7,10 @@
 
 		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
 	</head>
 
 	<body>
@@ -27,19 +31,19 @@
 		<main>
 			<ul class="productos">
 				<li><h2>Cabello</h2>
-					<img src="images/Cabello.jpg" alt="servicio corte y estilizado de cabello">
+					<img class="imagen-productos" src="images/Cabello.jpg" alt="servicio corte y estilizado de cabello">
 					<p class="producto-descripcion">Con tijera o máquina a gusto del cliente</p>
 					<p class="producto-precio">$ 10.00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
-					<img src="images/barba.jpg" alt="servicio corte y estilizado de barba">
+					<img class="imagen-productos" src="images/barba.jpg" alt="servicio corte y estilizado de barba">
 					<p class="producto-descripcion">Corte y diseño profesional de barba</p>
 					<p class="producto-precio">$ 8.00</p>
 				</li>
 				<li>
 					<h2>Cabello + Barba</h2>
-					<img src="images/cabello+barba.jpg" alt="servicio completo cabello y barba">
+					<img class="imagen-productos" src="images/cabello+barba.jpg" alt="servicio completo cabello y barba">
 					<p class="producto-descripcion">Paquete completo de cabello y barba</p>
 					<p class="producto-precio">$ 15.00</p>
 				</li>
