Curso de flexbox

--- a/Practicas/Encriptador/encriptador.html
+++ b/Practicas/Encriptador/encriptador.html
@@ -38,9 +38,9 @@
 
 	<footer>
 
-		<section>
+		<div>
 			<label>Proyecto desarrollado por Fatima Trinidad @2023</label>
-		</section>
+		</div>
 
 	</footer>
 
